--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "FruitieX",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "node-telegram-bot-api": "^0.17.0"
   }
